Donar Contribution list join done

--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,3 +1,4 @@
 findUserIdUserKeyEntity=select KEY_ID,CREATED_DATE,UPDATED_DATE,END_DATE,KEY_DESC,PRIVATE_KEY,START_DATE,USER_ID,KEY_STATUS from USER_KEYS where USER_ID = ?1 and KEY_STATUS= ?2
 findByFileType=select * from USER_IMAGES where id = ?1 and fileName= ?2
 findImgByIdAndStatus=select * from USER_IMAGES where USER_ID = ?1 and IMG_STS = ?2
+donarContributionJoinQuery=select new com.ecomm.akhtar.model.DonarContributionDTO(de.firstName,de.lastName,de.phoneNumber,de.email,dte.donationType,dte.donationTypeId,dme.donationAmount) from DonationAmountEntity dme join dme.donarsEntity de join dme.donationTypeEntity dte
