--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,4 +1,5 @@
 findUserIdUserKeyEntity=select KEY_ID,CREATED_DATE,UPDATED_DATE,END_DATE,KEY_DESC,PRIVATE_KEY,START_DATE,USER_ID,KEY_STATUS from USER_KEYS where USER_ID = ?1 and KEY_STATUS= ?2
 findByFileType=select * from USER_IMAGES where id = ?1 and fileName= ?2
 findImgByIdAndStatus=select * from USER_IMAGES where USER_ID = ?1 and IMG_STS = ?2
-donarContributionJoinQuery=select new com.ecomm.akhtar.model.DonarContributionDTO(de.firstName,de.lastName,de.phoneNumber,de.email,dte.donationType,dte.donationTypeId,dme.donationAmount) from DonationAmountEntity dme join dme.donarsEntity de join dme.donationTypeEntity dte
+donarContributionJoinQuery=select new com.ecomm.akhtar.model.DonarContributionDTO(de.firstName,de.lastName,de.phoneNumber,de.email,dte.donationType,dte.donationTypeId,dme.donationAmount,dme.createdDt) from DonationAmountEntity dme join dme.donarsEntity de join dme.donationTypeEntity dte
+#donarContributionJoinQuerySearchCriteria=select new com.ecomm.akhtar.model.DonarContributionDTO(de.firstName,de.lastName,de.phoneNumber,de.email,dte.donationType,dte.donationTypeId,dme.donationAmount) from DonationAmountEntity dme join dme.donarsEntity de join dme.donationTypeEntity dte where de.phoneNumber like :phoneNumber and dte.donationTypeId like : donationTypeId and dme.createdDt between :fromDate and :toDate 
