delete donar amount contribution api done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,7 @@ server.compression.enabled=true
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=ahmarsharif93@gmail.com
-spring.mail.password=pass786word
+spring.mail.password=########
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
