image upload partially done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,11 @@ app.jwtExpirationInMs = 604800000
 ## Server Properties
 server.port = 8081
 server.compression.enabled=true
+
+spring.servlet.multipart.enabled=true
+# Upload file total maximum
+spring.servlet.multipart.max-request-size=500KB
+ # Maximum value of a single file
+spring.servlet.multipart.max-file-size=500KB
+
+
