--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/charity_db
 spring.datasource.username=root
 spring.datasource.password=root
@@ -28,4 +28,6 @@ spring.servlet.multipart.max-request-size=300KB
  # Maximum value of a single file
 spring.servlet.multipart.max-file-size=300KB
 
+spring.jpa.properties.hibernate.jdbc.batch_size=10
+spring.jpa.properties.hibernate.order_inserts=true
 
